# smirk

./: .gitignore  .gitmodules  README.md  meson.build
kernel/: Makefile  fbcon.c  kmain.c  linker.ld  meson.build
kernel/include/: fbcon.h  font8x16.h  string.h
kernel/include/logging/: fbcon.h  font8x16.h  logging.h
kernel/lib/: meson.build  string.c
profiles/: i686-pc.ini
scripts/: smirk  smirk-env.sh
scripts/subscripts/: build.sh
toolchain/: limine.cfg
